--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -214,6 +214,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
+              <a class="casos-praticos-link" href=""><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -221,6 +222,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
+              <a class="casos-praticos-link" href=""><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -228,6 +230,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
+              <a class="casos-praticos-link" href=""><%= t('cases_more_link') %></a>
             </div>
           </div>
           <div>
@@ -235,6 +238,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
+              <a class="casos-praticos-link" href=""><%= t('cases_more_link') %></a>
             </div>
           </div>
       </div>
