--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
       <ul>
         <li><%= link_to t('menu_1'), {controller: "pages", action: "about"} %></li>
         <li>
-          <a class="dropdown" href="#"><%= link_to t('menu_4') %></a>
+          <a class="dropdown" href="#"><%= t('menu_4') %></a>
           <ul class="submenu">
             <li><%= link_to t('menu_4_1'), {controller: "pages", action: "become_partner"} %></li>
             <li><%= link_to t('menu_4_2'), {controller: "pages", action: "become_contributor"} %></li>
