--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,7 +32,7 @@
         </div>
         <aside class="grid-30 col1 box-author share-bar">
         <div class="box-author-inner">
-          <h4><%= @article.author.upcase %> TAMBÉM ESCREVEU</h4>
+          <h4><%= @article.author.mb_chars.upcase %> TAMBÉM ESCREVEU</h4>
           <ul class="list-news">
             <% @author_articles.each do |article| %>
               <li class="without-top">
