W3CBrasil/OD4D#53 - Placeholder views, become partner content.

--- a/app/views/casein/posts/_form.html.erb
+++ b/app/views/casein/posts/_form.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<%= casein_datetime_select f, f.object, :pub_date, {:casein_label => "Título"} %>
+		<%= casein_datetime_select f, f.object, :pub_date, {:casein_label => "Data"} %>
 	</div>
 </div>
 <div class="row">
