--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -171,7 +171,7 @@
       <ul class="list-engaje">
         <li class="grid-33">
           <div class="conceitos engaje-item">
-            <h4><%= raw(t('concepts_title')) %></h4>
+            <h4><%= raw(t('concepts_home_title')) %></h4>
             <p><%= link_to t('concepts_websemantics').upcase, {controller: "learn", action: "concepts"} %></p>
             <p><%= link_to t('concepts_rdfa').upcase, {controller: "learn", action: "introduction_to_rdf_and_rdfa"} %></p>
             <p><%= link_to t('concepts_examples').upcase, {controller: "learn", action: "how_to_create_a_semantic_page"} %></p>
