W3CBrasil/OD4D#53 - pairing w/ @alvarocavalcanti - add home video

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,13 +32,13 @@
       </ul>
     </div>
     <div class="video-call-banner video-curioso">
-      <%= video_tag(['dadosabertos.mp4'], id: 'vidcur', class: 'video', size: '550x300', controls: true)  %>
+      <%= video_tag(['dadosabertos.webm'], id: 'vidcur', class: 'video', size: '550x300', controls: true)  %>
     </div>
    <div class="video-call-banner video-dev">
-      <%= video_tag(['dadosabertos.mp4'], id: 'viddev', class: 'video', size: '550x300', controls: true)  %>
+      <%= video_tag(['dadosabertos.webm'], id: 'viddev', class: 'video', size: '550x300', controls: true)  %>
     </div>
     <div class="video-call-banner video-produtor">
-      <%= video_tag(['dadosabertos.mp4'], id: 'vidprod', class: 'video', size: '550x300', controls: true)  %>
+      <%= video_tag(['dadosabertos.webm'], id: 'vidprod', class: 'video', size: '550x300', controls: true)  %>
     </div>
     <div class="pos-call-banner bgdarkgreen pos-curioso">
       <div class="push-15 grid-90">
