--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -189,7 +189,7 @@
             <h4><%= raw(t('share_title')) %></h4>
             <div>
               <p><%= raw(t('share_quote').upcase) %></p>
-              <%= render :partial => '/layouts/followus', locals: {title: ""} %>
+              <%= render :partial => '/layouts/followus' %>
             </div>
           </div>
         </li>
