--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,21 +16,22 @@
     </div>
   </div>
   <section property="schema:articleBody" class="grid-container content post-list">
-    <div class="container2">
-      <div class="container1">
-        <div class="grid-70 col2 bgwhite" style="min-height: 300px; min-width: 600px;">
-          <p>
-            <%= raw(@article.article_content) %>
-            <% if @article.article_content.size == 500 && @article.is_third_party? %>
-              ...<br/>
-              [<a href="<%=@article.url%>" target="_blank"><%= t('read_more') %></a>]
-            <% end %>
-          </p>
-          <div class="share-post">
-            <%= render :partial => '/layouts/followus', locals: {title: t('likeit_shareit')} %>
+        <div class="grid-70 bgwhite" style="min-height: 300px; min-width: 600px;">
+          <div class="post-list-content-inner">
+            <p>
+              <%= raw(@article.article_content) %>
+              <% if @article.article_content.size == 500 && @article.is_third_party? %>
+                ...<br/>
+                [<a href="<%=@article.url%>" target="_blank"><%= t('read_more') %></a>]
+              <% end %>
+            </p>
+            <div class="share-post">
+              <p><%=t 'likeit_shareit' %></p>
+              <%= render :partial => '/layouts/followus' %>
+            </div>
           </div>
         </div>
-        <aside class="grid-30 col1 box-author share-bar">
+        <aside class="grid-30 box-author share-bar">
         <div class="box-author-inner">
           <h4><%= @article.author.mb_chars.upcase %> <%= t('also_wrote').mb_chars.upcase %></h4>
           <ul class="list-news">
@@ -43,7 +44,5 @@
           </ul>
         </div>
         </aside>
-      </div>
-    </div>
   </section>
 </article>
