--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -39,7 +39,8 @@
       </ul>
     </div>
     <div class="grid-20 social-bottom">
-      <%= render :partial => '/layouts/followus', locals: {title: t('follow_us')} %>
+      <h3><%=t 'follow_us' %></h3>
+      <%= render :partial => '/layouts/followus' %>
       <div class="fb-like" data-href="https://www.facebook.com/opendata4dev" data-width="208" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
       <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fopendata4dev&amp;width=208&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=80&amp;appId=222702521261155" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:208px; height:80px;" allowTransparency="true"></iframe>
     </div>
