--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
     </div>
   </div>
   <section property="schema:articleBody" class="grid-container content post-list">
-        <div class="grid-70 bgwhite" style="min-height: 300px; min-width: 600px;">
+        <div class="grid-70 bgwhite">
           <div class="post-list-content-inner">
             <p>
               <%= raw(@article.article_content) %>
