--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,34 +15,42 @@
       <%= link_to t('home'), controller: "home", action: "index" %>
        | <a href="#">ABOUT</a>
       </p>
-      <h1 class="title blackgrayfont grid-100"><%= t('about_title') %></h1>
       <div class="">
         <div class="grid-100">
-          <div class="od4d-about-video">
-            <div class="video-container">
-              <video id="vidcur" class="video" width="550" height="300" controls>
-                  <source src="dadosabertos.mp4" type="video/mp4"></source>
-              </video>
-            </div>
-          </div>
-
           <section class="introduction grid-100">
-            <p>The project Open Data for Development Platform (OD4D) is a <a href="http://www.w3c.br">W3C Brazil Office</a> project. Initially, the OD4D project was a partnership with the Economic Commission for Latin America and the Caribbean (<a href="http://www.cepal.org/">ECLAC</a>) and funded by the International Development Research Center of Canada (<a href="http://www.idrc.ca/">IDRC</a>). One of its primary objectives was to contribute to the development of strategies on open data for government transparency, innovative services and the effectiveness of public policies in key industry sectors, fostering a more inclusive knowledge economy in the Latin America and Caribbean region.</p>
-            <p>In its first phase of implementation, which occurred from 2011 to 2013, <a href="http://platform.od4d.org/about/">several products</a> were generated, as the portal Open Data for Development (OD4D), launched in October 2012 in Portuguese, English and Spanish; the development of applications using open data; mapping of the major initiatives for the dissemination of economic, social and environmental structured data in Latin America and the Caribbean; the Tool Kit for Publishing Data in Open Format, licensed under Creative Commons; the first <a href="http://confdatosabiertos.uy/">Regional Conference for Latin America and the Caribbean</a>; among many other actions.</p>
-            <p>To continue OD4D project and also to support the IDRC proposal to extend it to Africa and Asia, the W3C Brazil proposed a OD4D re-designing to make it a semantic, linked data platform. W3C Brazil had in mind to transform the platform into a reference in linked data system enabling technology learning, community information exchange and the production of semantic content. Currently the development of OD4D Platform is funded by the Brazilian Network Information Center (NIC.br) and the Brazilian Internet Steering Committee (CGI.br).</p>
-            <p>To accommodate the new Platform, a new structure of domains and email addresses was considered. The URL www.od4d.org points to the main website of all OD4D initiatives that link visitors to other addresses:
-              <ul>
-                <li><a href="http://platform.od4d.org">platform.od4d.org</a> - "Open Data for Development Platform" is the website that hosts the platform for interaction with the linked data community, with educational resources on the topic and use cases;</li>
-                <li><a href="http://www.od4d.net">www.od4d.net</a> - "Open Data for Development Network" consists of a website that focuses OD4D project partners such as the Initiative Latinoamericana por los Datos Abiertos (ILDA); the Caribbean Open Institute (COI); the Open Data Research Network (ODDC); and funders such as the International Development Research Center of Canada (IDRC); World Wide Web Foundation; Avina Foundation; Economic Commission for Latin America and the Caribbean (ECLAC) and the Organization of American States (OAS).</li>
-              </ul>
-            </p>
+            <h1 class="title blackgrayfont grid-100">About OD4D</h1>
+            <p>Open Data for development (OD4D) is a coalition of global and regional open data initiatives to harness open data to achieve development outcomes. It includes:</p>
+            <ul>
+            <li>The Latin American Open Data Initiative (<a href="http://idatosabiertos.org/">ILDA</a>)</li>
+            <li>The Caribbean Open Institute (<a href="http://www.caribbeanopeninstitute.org/" title="The Caribbean Open Institute">COI</a>)</li>
+            <li>The Open Data Research Network (<a href="http://www.opendataresearch.org/" title="The Open Data Research network | Open Data Research Network">ODDC</a>)</li>
+            <li>The OD4D initiative of the <a href="http://www.opengovpartnership.org/groups/opendata/resources/od4d-cfp-2014" title="OD4D Call for Proposals (Sep 2014) | Open Government Partnership">Open Data Working Group</a> of the Government Partnership </li>
+            <li>The OD4D Platform</li>
+            </ul>
+            <p>The OD4D website was created in the project “Open Data for Public Policy in Latin America” – which was implemented from 2011 to 2013. This was a partnership with the Economic Commission for Latin America and the Caribbean (<a href="http://www.cepal.org/" title="CEPAL  - 
+          Comisión Económica para América Latina y el Caribe">ECLAC</a>) and funded by the International Development Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx" title="IDRC - 
+  International Development Research Centre">IDRC</a>). Achievements include the first R<a href="http://confdatosabiertos.uy/" title="Inicio">egional Conference for Latin America and the Caribbean</a>; among many other actions.
+            For more information on the broad OD4D initiatives, please visit www.od4d.org</p>
+
+            <h1 class="title blackgrayfont grid-100">About OD4D Platform</h1>
+             
+            <p>"Open Data for Development Platform" is the platform for interaction with the linked data community, with educational resources and use cases on the topic;</p>
+             
+            <p>The OD4D platform is an initiative of the <a href="http://www.w3c.br/Home/WebHome" title="W3C Brasil - World Wide Web Consortium Escritório Brasil">W3C Brazil</a> Office. Currently the development of OD4D Platform is funded by the Brazilian Network Information Center (<a href="http://www.nic.br/english/" title="NIC.br - Brazilian Network Information Center">NIC.br</a>) and the Brazilian Internet Steering Committee (<a href="http://www.cgi.br/pagina/about-the-cgi-br/148" title="CGI.br - About the CGI.br">CGI.br</a>).</p>
+             
             <p>The goal of building this new platform is to strengthen and expand the existing community, meet new cases, point to good practices in data on the Web, promote relevant standards and vocabularies, as well as emphasizing the value of content in multiple languages ​​within the platform.</p>
+             
             <p>Besides being a space for knowledge exchange, the platform also aims at being itself an example of implementation of semantic web and linked data technologies. Thus, the platform acts as a hub for investors, governments, institutions and individuals that have intention to work together in creating a collaborative network around the theme of publishing data for development in Latin America, Africa, Asia and the Caribbean.</p>
+             
             <p>Among its many features, the platform offers an environment where people can post information and also be informed about open data and related topics. The system consists of three main modules: the publisher, the parser and the storer. The publisher module enables the input of new content into the platform. The parser processes partners' RSS channel and extracts semantic triples about this content. Finally, the storer stores RDF triples using the Turtle syntax with the help of Jena suite.</p>
+             
             <p>Finally, the platform provides an end-point (web service that answers semantic queries) so that users can access this information from the collected triple repository. This whole platform is available on Github for anyone who wants to build a website or semantic platform on some other domain.</p>
+             
             <p>Its usability was placed first in the development of the platform. The entire design was thought to facilitate the integration of users and their demands for content. The free flow of information among the various users will reflect the dynamic and decentralized structure of the global network of interconnected data.</p>
+             
             <p>The platform was built with semantic web and linked data technologies. The web application runs the Ruby on Rails framework. The RDF triples use Turtle syntax and their interface with an HTTP server were implemented using the Jena and Fuseki technologies by Apache Software Foundation.</p>
-            <p>It is also expected that interfaces of interaction provided on the platform enable greater integration of experts and enthusiasts of open data and semantic web technology community, facilitating an intensive exchange of information and the advancement of knowledge on open data, linked data and semantic web the American region, Caribbean and other regions covered by the initiative.</p>
+             
+            <p>It is also expected that interfaces of interaction provided on the platform enable greater integration of experts and enthusiasts of open data and semantic web technology community, facilitating an intensive exchange of information and the advancement of knowledge on open data, linked data and semantic web the American region, Caribbean and other regions covered by the initiative.  </p>
           </section>
         </div>
       </div>
